Fixed alignment issues

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -15,6 +15,7 @@ ul, ol{padding-left: 3vh; padding-top:2vh;}
 .form_new_tab{background-color: #FBF8F1; position: absolute; left: 80%; display: none;}
 .payment_btn{width: 100%; margin: 5vh 0;}
 .active{font-weight: bolder;}
+.alignment_error{padding-bottom: 25vh;}
 
 
 
@@ -52,16 +53,15 @@ ul, ol{padding-left: 3vh; padding-top:2vh;}
 .outcome_content {padding-left:3%;}
 
 
-#course_typ{margin: 0.5% 0 3%; background-color:#fef0e8;padding: 0 10%; }
+#course_typ{margin: 0.5% 0 3%; background-color:#fef0e8;padding: 0 10% 3%; }
 .course_options{padding: 4vh 0 0;}
 .course_typ_row{margin:0;}
-.notice{font-family:'Poppins', sans-serif;font-weight: bold;padding: 3vh 0 1vh; text-align: center;}
+.notice{font-family:'Poppins', sans-serif;font-weight: bold; text-align: center;}
 .crash_course img{width: 95%; height: 50%;}
 .crash_course h4{padding: 3vh 0 1vh;text-align: center; margin-top: 2vh;}
 .advance img{width: 95%; height: 50%;text-align: center; }
 .advance h4{padding: 3vh 0 1vh; text-align: center;margin-top: 2vh;}
 .course_content_btn{margin-top: 6.5vh;}
-.course_typ_divider{margin: 5vh 0;}
 .training img{width: 95%; height: 65%;text-align: center;}
 .training h4{padding: 3vh 0 1vh; text-align: center;margin-top:2vh;}
 .training p{text-align: center;}
@@ -69,7 +69,6 @@ ul, ol{padding-left: 3vh; padding-top:2vh;}
 .download h4{padding: 3vh 0 1vh; text-align: center;margin-top:2vh;}
 .download p{text-align: center;}
 .btn-primary{background-color:#0041a5; font-size: 1.1rem;font-weight: 400;}
-.resource-btn{margin-top:3vh;}
 
 #social_media{padding: 0 10%;}
 .Instagram{text-align: center;}
@@ -97,7 +96,7 @@ ul, ol{padding-left: 3vh; padding-top:2vh;}
 
 
 /* Beginner course page */
-.beginner_course_content h4{margin-bottom:7vh;}
+.beginner_course_content h4{margin-bottom:5vh;}
 .beginner_course_content ul{padding: 0;margin:1.5vh 0.7vh;}
 .know_more{padding: 0 15%;margin: 8vh 0;}
 .beginner_course_details{margin-top:5%; padding: 0 15%;}
@@ -108,15 +107,16 @@ ul, ol{padding-left: 3vh; padding-top:2vh;}
 
 
 /* Advance Course Page */
-.advance_course_content h4{margin-bottom:7vh;}
+.advance_course_content h4{margin-bottom:5vh;}
 .advance_course_content ul{padding: 0;margin:1.5vh 0.7vh;}
 .advance_course_details img{width: 110vh; height: 60vh; max-width: 100%; max-height: 100%;}
 .advance_course_details{margin-top:5%; padding: 0 15%;}
 
-#advance_plugins{margin: 2% 0 3%; background-color:#fef0e8; padding: 2% 15%; text-align: center;}
-.plugin_detail img{width: 95%; height: 65%;}
-.plugin_detail h4{padding: 2vh 0 3vh;text-align: center; margin-top: 1vh;font-size:1.5rem;}
+#advance_plugins{margin: 2% 0 0; background-color:#fef0e8; padding: 2% 15% 0; text-align: center;}
+.plugin_detail img{width: 95%; height: 65%; max-width: 100%; max-height: 100%;}
+.plugin_detail h4{padding: 1vh 0 2vh;text-align: center;font-size:1.5rem;}
 .registeration_soon{margin:5% 0; padding: 0 15%; font-style: italic;}
+.alignment_error_AC{padding-bottom: 10vh;}
 
 
 /* payment page */
